# crucible

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  README.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  requirements.txt  restore.sh  start.sh
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup_db.py
backend/DDL/: hints.sql  puzzle.sql  schema.sql  timings.sql  users.sql
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/migrations/: add_is_public_column.sql
frontend/: .env.example  Dockerfile  package-lock.json  package.json  readme.md
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @miragejs.js  @reduxjs.js  @swc.js  asynckit.js  axios.js  combined-stream.js  (+24 more)
frontend/app/: StoreProvider.tsx  config.tsx  crypto.sh  globals.css  layout.tsx  notavirus.sh  page.tsx  shakespeare-quotes.ts
frontend/app/login/: page.tsx
frontend/app/mocks/: server.tsx
frontend/app/my-puzzles/: page.tsx
frontend/app/public-puzzles/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts
frontend/shared/components/: author.tsx
frontend/slices/: AllSlices.tsx  SolverSlice.tsx
frontend/store/: Hooks.tsx  Store.tsx
frontend/types/: types.tsx
(+135 files in other folders)
